--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,8 @@ available in the app when your plugin is enabled.
 If your plugin does not need CSS, delete this file.
 
 */
+
+.view-actions-container {
+	height: 20px;
+	width: 100%;
+}
