--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,11 @@
 	font-weight: var(--font-extralight);
 	letter-spacing: 1px;
 }
+.pol__note-actions {
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+}
 .pol__hero-breadcrumbs {
 
 }
@@ -46,6 +51,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
+	border-bottom: 2px solid #fff3;
 }
 
 .pol__hero-contents-cta {
