--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@
 	width: 100%;
 	padding-left: calc(var(--size-4-3) + var(--size-2-3)); /* the same as for back-button*/
 	padding-right: calc(var(--size-4-3)); /* the same as for */
-	/*background-image: linear-gradient(335deg, rgba(15, 2, 2, 1) 11.2%, rgba(36, 163, 190, 1) 91.1%);*/
-	background-image: linear-gradient( 164deg,  rgba(136,80,226,1) 4%, rgba(16,13,91,1) 96.5% );
-	color: var(--color-base-00);
 	--icon-size: var(--icon-s);
 	--icon-color: var(--color-base-05);
+	-webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+	-moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+	box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 .pol__hero-heading {
 	display: flex;
@@ -31,9 +31,10 @@
 
 }
 .pol__hero-title {
-	font-size: 3rem;
+	font-size: 1.5rem;
 	font-weight: var(--font-black);
-	letter-spacing: 3px;
+	letter-spacing: 2px;
+	text-transform: uppercase;
 	line-height: 130%;
 	margin-bottom: 10px;
 }
